--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,60 @@
+@charset "UTF-8";
+@font-face {
+  font-family: "Figtree";
+  src: url("/src/fonts/static/Figtree-VariableFont_wght.ttf") format("truetype");
+  font-weight: 100 900; /* Шрифт підтримує змінні ваги */
+  font-style: normal;
+}
+@font-face {
+  font-family: "Figtree";
+  src: url("/src/fonts/static/Figtree-Italic-VariableFont_wght.ttf") format("truetype");
+  font-weight: 100 900;
+  font-style: italic;
+}
+@font-face {
+  font-family: "FigtreeExtraBold";
+  src: url("/src/fonts/static/Figtree-ExtraBold.ttf") format("truetype");
+  font-weight: 800;
+  font-style: normal;
+}
+@font-face {
+  font-family: "FigtreeSemiBold";
+  src: url("/src/fonts/static/Figtree-SemiBold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Figtree", sans-serif;
+}
+
+body {
+  background-color: #F4D04E;
+}
+
+main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 92svh;
+}
+
+.card-component {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  background-color: #FFFFFF;
+  border-radius: 20px;
+  padding: 24px;
+  height: 522px;
+  width: 384px;
+}
+
+.image-container__image {
+  border-radius: 10px;
 }
 
 /*# sourceMappingURL=styles.css.map */
