--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,35 @@
-@charset "UTF-8";
 @font-face {
-  font-family: "Figtree";
-  src: url("/src/fonts/static/Figtree-VariableFont_wght.ttf") format("truetype");
-  font-weight: 100 900; /* Шрифт підтримує змінні ваги */
+  font-family: "Text Preset 1";
+  src: url("./src/fonts/static/Figtree-ExtraBold.ttf") format("truetype");
+  font-weight: bolder;
   font-style: normal;
 }
 @font-face {
-  font-family: "Figtree";
-  src: url("/src/fonts/static/Figtree-Italic-VariableFont_wght.ttf") format("truetype");
-  font-weight: 100 900;
-  font-style: italic;
-}
-@font-face {
-  font-family: "FigtreeExtraBold";
-  src: url("/src/fonts/static/Figtree-ExtraBold.ttf") format("truetype");
-  font-weight: 800;
+  font-family: "Text Preset 2";
+  src: url("./src/fonts/static/Figtree-VariableFont_wght.ttf") format("truetype");
+  font-weight: normal;
   font-style: normal;
 }
 @font-face {
-  font-family: "FigtreeSemiBold";
-  src: url("/src/fonts/static/Figtree-SemiBold.ttf") format("truetype");
-  font-weight: 600;
+  font-family: "Text Preset 3";
+  src: url("./src/fonts/Figtree-VariableFont_wght.ttf") format("truetype");
+  font-weight: bold normal;
   font-style: normal;
+}
+@font-face {
+  font-family: "Text Preset 4";
+  src: url("./src/fonts/static/Figtree-ExtraBold.ttf") format("truetype");
+  font-size: 14px;
+  font-weight: bolder;
+  font-style: normal;
+  letter-spacing: 0px;
+  line-height: 150%;
 }
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Figtree", sans-serif;
+  font-family: "Text Preset 3";
 }
 
 body {
@@ -44,17 +46,93 @@ main {
 .card-component {
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 24px;
   background-color: #FFFFFF;
+  border: 1px solid #111111;
   border-radius: 20px;
+  box-shadow: 8px 8px 0px 0px #111111;
+  -webkit-box-shadow: 8px 8px 0px 0px #111111;
+  -moz-box-shadow: 8px 8px 0px 0px #111111;
   padding: 24px;
   height: 522px;
   width: 384px;
 }
+.card-component__summary-container {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+.card-component__summary-container h3 {
+  background-color: #F4D04E;
+  border-radius: 4px;
+  font-family: "Text Preset 3";
+  font-size: 14px;
+  letter-spacing: 0px;
+  line-height: 150%;
+  padding: 4px 12px;
+  width: fit-content;
+}
+.card-component__summary-container h4 {
+  font-family: "Text Preset 3";
+  font-size: 14px;
+  font-weight: normal;
+  letter-spacing: 0px;
+  line-height: 150%;
+  color: #111111;
+}
+.card-component__summary-container h1 {
+  font-family: "Text Preset 1";
+  font-size: 24px;
+  letter-spacing: 0px;
+  line-height: 150%;
+}
+.card-component__summary-container h1:hover {
+  color: #F4D04E;
+  cursor: pointer;
+}
+.card-component__summary-container p {
+  font-size: 16px;
+  font-weight: normal;
+  letter-spacing: 0px;
+  line-height: 150%;
+  color: #6B6B6B;
+}
+.card-component__autor-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 12px;
+}
+
+.card-component__image-container {
+  align-self: center;
+  height: 200px;
+}
 
 .image-container__image {
   border-radius: 10px;
+  height: 200px;
+}
+
+.autor-container__autor-photo {
+  height: 32px;
+  width: 32px;
+}
+.autor-container__autor-name {
+  font-size: 16px;
+  letter-spacing: 0px;
+  line-height: 150%;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 8svh;
+}
+footer a {
+  color: #3e52a3;
 }
 
 /*# sourceMappingURL=styles.css.map */
